workloads/frontend/podinfo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  annotations:
    linkerd.io/inject: enabled
